--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,10 @@ header {
   transition: .125s;
 }
 
+.header__link-active {
+  border-bottom: 2px solid #0075ff;
+}
+
 .header__link:hover {
   border-bottom: 2px solid #0075ff;
 }
@@ -84,6 +88,10 @@ header {
   border-bottom: 2px solid #e8e8e8;
   -webkit-transition: .125s;
   transition: .125s;
+}
+
+.nav__link-active {
+  border-bottom: 2px solid #0075ff;
 }
 
 .nav__link:hover {
@@ -480,8 +488,13 @@ footer {
   font-weight: 500;
   padding: 5px 10px;
   margin-bottom: 10px;
-  border-radius: 5px;
-  border: 1px solid gray;
+  border: none;
+  border-bottom: 1px solid gray;
+  background: #f8f8f8;
+}
+
+.reg__inp:focus-visible {
+  outline: none;
 }
 
 .reg__legend {
@@ -489,7 +502,7 @@ footer {
   font-size: 24px;
   font-weight: 500;
   margin-bottom: 20px;
-  color: #0075ff;
+  color: #000;
 }
 
 .reg__label {
@@ -530,6 +543,13 @@ footer {
   padding: 150px 0 75px;
 }
 
+.profile__header {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
 .profile__content {
   -webkit-transition: .25s;
   transition: .25s;
@@ -565,6 +585,7 @@ footer {
 .profile__data_text {
   font-size: 18px;
   font-weight: 500;
+  border-bottom: 1px solid gray;
 }
 
 .profile__btns {
@@ -588,6 +609,15 @@ footer {
   color: #fff;
 }
 
+.profile__exit {
+  border: 1px solid #c41a1a;
+  color: #c41a1a;
+}
+
+.profile__exit:hover {
+  background: #c41a1a;
+}
+
 .profile__book {
   width: 40%;
 }
@@ -607,5 +637,483 @@ footer {
 .profile__book_data {
   display: inline;
   line-height: 28px;
+}
+
+.book {
+  min-height: 70vh;
+  background: #f8f8f8;
+  padding: 100px 0 75px;
+}
+
+.book__content {
+  -webkit-transition: .25s;
+  transition: .25s;
+  opacity: 0;
+  -webkit-animation: showText .25s 1;
+          animation: showText .25s 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.book__title {
+  font-size: 18px;
+  font-weight: 500;
+  color: #0075ff;
+  margin-bottom: 0px;
+}
+
+.book__data {
+  margin: 20px 0 40px;
+}
+
+.book__data_title {
+  font-size: 14px;
+  color: gray;
+  font-weight: 300;
+  display: block;
+  margin-top: 10px;
+}
+
+.book__data_text {
+  font-size: 18px;
+  border-bottom: 1px solid gray;
+  display: inline;
+  width: 100%;
+}
+
+.book__data_left {
+  margin-left: 150px;
+}
+
+.book__data_close {
+  display: block;
+  text-align: right;
+  font-weight: 300;
+  -webkit-transition: .15s;
+  transition: .15s;
+}
+
+.book__data_close:hover {
+  cursor: pointer;
+  color: #c41a1a;
+}
+
+.book__auto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.book__card {
+  display: inline;
+  line-height: 32px;
+  padding-bottom: 3px;
+  border-bottom: 1px solid #0075ff;
+  cursor: pointer;
+  background: #fff;
+  font-size: 14px;
+  -webkit-transition: .1s;
+  transition: .1s;
+  color: #0075ff;
+}
+
+.book__card:hover {
+  border-bottom: 1px solid gray;
+  color: gray;
+}
+
+.book__chosenCard {
+  font-size: 14px;
+  margin-right: 15px;
+}
+
+.book__add {
+  display: inline;
+  line-height: 64px;
+  padding: 3px 7px;
+  border: 1px solid #0075ff;
+  cursor: pointer;
+  background: #fff;
+  -webkit-transition: .15s;
+  transition: .15s;
+  color: #0075ff;
+}
+
+.book__add:hover {
+  background: #0075ff;
+  color: #fff;
+}
+
+.book__price {
+  margin-top: 30px;
+}
+
+.book__disc {
+  font-size: 12px;
+  font-weight: 300;
+  color: gray;
+  margin-left: 5px;
+}
+
+.book__sum {
+  font-size: 24px;
+  color: #0075ff;
+  font-weight: 500;
+}
+
+.book__btn {
+  display: inline;
+  line-height: 128px;
+  padding: 7px 15px;
+  font-size: 18px;
+  cursor: pointer;
+  -webkit-transition: .15s;
+  transition: .15s;
+  background: #0075ff;
+  border: 1px solid #0075ff;
+  color: #fff;
+}
+
+.book__btn:hover {
+  background: #fff;
+  color: #0075ff;
+  border: 1px solid #0075ff;
+}
+
+.book__header {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.sel {
+  min-height: 70vh;
+  background: #f8f8f8;
+  padding: 150px 0 75px;
+}
+
+.sel__header {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.sel__content {
+  -webkit-transition: .25s;
+  transition: .25s;
+  opacity: 0;
+  -webkit-animation: showText .25s 1;
+          animation: showText .25s 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+  max-width: 1024px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.sel__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  vertical-align: bottom;
+}
+
+.sel__item {
+  max-width: 23%;
+  margin: 50px 1%;
+}
+
+.sel__item_img {
+  width: 100%;
+  height: 125px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin-bottom: 10px;
+}
+
+.sel__item_title {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 10px 0;
+}
+
+.sel__item_color {
+  font-size: 14px;
+  color: gray;
+}
+
+.sel__item_info {
+  color: gray;
+  font-size: 14px;
+}
+
+.sel__item_btn {
+  display: inline;
+  line-height: 64px;
+  padding: 3px 7px;
+  border: 1px solid #0075ff;
+  cursor: pointer;
+  background: #fff;
+  -webkit-transition: .15s;
+  transition: .15s;
+  color: #0075ff;
+}
+
+.sel__item_btn:hover {
+  background: #0075ff;
+  color: #fff;
+}
+
+.br {
+  min-height: 70vh;
+  background: #f8f8f8;
+  padding: 150px 0 75px;
+}
+
+.br__title {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.br__content {
+  -webkit-transition: .25s;
+  transition: .25s;
+  opacity: 0;
+  -webkit-animation: showText .25s 1;
+          animation: showText .25s 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+  max-width: 1024px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.map__item {
+  max-width: 30%;
+  margin-left: 5px;
+}
+
+.map__item_img {
+  height: 65px;
+}
+
+.cards {
+  min-height: 70vh;
+  background: #f8f8f8;
+  padding: 150px 0 75px;
+}
+
+.cards__header {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.cards__content {
+  -webkit-transition: .25s;
+  transition: .25s;
+  opacity: 0;
+  -webkit-animation: showText .25s 1;
+          animation: showText .25s 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+  max-width: 1024px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.cards__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 40px;
+}
+
+.cards__item {
+  width: 25%;
+  text-align: center;
+  border: 2px solid #0075ff;
+  border-radius: 15px;
+  padding: 40px 20px 20px;
+  -webkit-transition: .3s;
+  transition: .3s;
+  cursor: pointer;
+}
+
+.cards__item:hover {
+  background: #ebebeb;
+}
+
+.cards__item_anim:hover {
+  background: #0075ff;
+  color: #fff;
+}
+
+.cards__type {
+  width: 50px;
+}
+
+.cards__num {
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.cards__active {
+  font-size: 14px;
+}
+
+.cards__active-no {
+  color: #c41a1a;
+}
+
+.cards__del {
+  margin-top: 20px;
+  font-size: 14px;
+  -webkit-transition: .15s;
+  transition: .15s;
+  text-decoration: none;
+  color: inherit;
+  line-height: 48px;
+}
+
+.cards__del:hover {
+  cursor: pointer;
+  color: #c41a1a;
+}
+
+.cards__add {
+  padding-top: 10px;
+  font-size: 64px;
+}
+
+.cards__add_text {
+  font-size: 18px;
+}
+
+.modal {
+  display: none;
+  background: rgba(0, 0, 0, 0.4);
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+}
+
+.modal__content {
+  background: #f8f8f8;
+  border-radius: 15px;
+  width: 268px;
+  padding: 25px 50px;
+  margin: 0 auto;
+  margin-top: 10vh;
+}
+
+.modal__close {
+  font-size: 24px;
+  cursor: pointer;
+  -webkit-transition: .15s;
+  transition: .15s;
+  font-weight: 500;
+  line-height: 32px;
+}
+
+.modal__close:hover {
+  color: #c41a1a;
+}
+
+.history {
+  min-height: 70vh;
+  background: #f8f8f8;
+  padding: 150px 0 75px;
+}
+
+.history__header {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+}
+
+.history__content {
+  -webkit-transition: .25s;
+  transition: .25s;
+  opacity: 0;
+  -webkit-animation: showText .25s 1;
+          animation: showText .25s 1;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 1.25s;
+          animation-delay: 1.25s;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+.history__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.history__card {
+  margin-top: 20px;
+  margin-left: 20px;
+  border: 2px solid lightgray;
+  border-radius: 15px;
+  width: 28%;
+  padding: 25px 10px;
+}
+
+.history__card-first {
+  margin-left: 0;
+}
+
+.history__img {
+  width: 100%;
+  margin: 20px 0;
+}
+
+.history__book {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.history__title {
+  font-size: 14px;
+  font-weight: 300;
+  color: gray;
+}
+
+.history__data {
+  font-size: 18px;
+  font-weight: 500;
 }
 /*# sourceMappingURL=style.css.map */
