--- a/css/style.sass
+++ b/css/style.sass
@@ -43,6 +43,8 @@ header
         text-decoration: none
         border-bottom: 2px solid #e8e8e8
         transition: .125s
+        &-active
+            border-bottom: 2px solid rgb(0,117,255)
         &:hover
             border-bottom: 2px solid rgb(0,117,255)
 
@@ -58,6 +60,8 @@ header
     text-decoration: none
     border-bottom: 2px solid #e8e8e8
     transition: .125s
+    &-active
+        border-bottom: 2px solid rgb(0,117,255)
     &:hover
         border-bottom: 2px solid rgb(0,117,255)
 
@@ -308,14 +312,17 @@ footer
         font-weight: 500
         padding: 5px 10px
         margin-bottom: 10px
-        border-radius: 5px
-        border: 1px solid gray
+        border: none
+        border-bottom: 1px solid gray
+        background: #f8f8f8
+        &:focus-visible
+            outline: none
     &__legend
         text-align: center
         font-size: 24px
         font-weight: 500
         margin-bottom: 20px
-        color: rgb(0,117,255)
+        color: #000
     &__label
         font-size: 14px
         font-weight: 300
@@ -343,6 +350,11 @@ footer
     min-height: 70vh
     background: #f8f8f8
     padding: 150px 0 75px
+    &__header
+        font-size: 24px
+        text-align: center
+        font-weight: 500
+        margin-bottom: 50px
     &__content
         transition: .25s
         opacity: 0
@@ -365,6 +377,7 @@ footer
         &_text
             font-size: 18px
             font-weight: 500
+            border-bottom: 1px solid gray
     &__btns
         padding-top: 20px
     &__btn
@@ -379,6 +392,11 @@ footer
         &:hover
             background: rgb(0,117,255)
             color: #fff
+    &__exit
+        border: 1px solid #c41a1a
+        color: #c41a1a
+        &:hover
+            background: #c41a1a
     &__book
         width: 40%
         &_card
@@ -392,3 +410,308 @@ footer
         &_data
             display: inline
             line-height: 28px
+
+.book
+    min-height: 70vh
+    background: #f8f8f8
+    padding: 100px 0 75px
+    &__content
+        transition: .25s
+        opacity: 0
+        animation: showText .25s 1
+        animation-fill-mode: forwards
+        animation-delay: 1.25s
+        max-width: 1024px
+        margin: 0 auto
+    &__title
+        font-size: 18px
+        font-weight: 500
+        color: rgb(0,117,255)
+        margin-bottom: 0px
+    &__data
+        margin: 20px 0 40px
+        &_title
+            font-size: 14px
+            color: gray
+            font-weight: 300
+            display: block
+            margin-top: 10px
+        &_text
+            font-size: 18px
+            border-bottom: 1px solid gray
+            display: inline
+            width: 100%
+        &_left
+            margin-left: 150px
+        &_close
+            display: block
+            text-align: right
+            font-weight: 300
+            transition: .15s
+            &:hover
+                cursor: pointer
+                color: #c41a1a
+    &__auto
+        display: flex
+        flex-wrap: wrap
+    &__card
+        display: inline
+        line-height: 32px
+        padding-bottom: 3px
+        border-bottom: 1px solid rgb(0,117,255)
+        cursor: pointer
+        background: #fff
+        font-size: 14px
+        transition: .1s
+        color: rgb(0,117,255)
+        &:hover
+            border-bottom: 1px solid gray
+            color: gray
+    &__chosenCard
+        font-size: 14px
+        margin-right: 15px
+    &__add
+        display: inline
+        line-height: 64px
+        padding: 3px 7px
+        border: 1px solid rgb(0,117,255)
+        cursor: pointer
+        background: #fff
+        transition: .15s
+        color: rgb(0,117,255)
+        &:hover
+            background: rgb(0,117,255)
+            color: #fff
+    &__price
+        margin-top: 30px
+    &__disc
+        font-size: 12px
+        font-weight: 300
+        color: gray
+        margin-left: 5px
+    &__sum
+        font-size: 24px
+        color: rgb(0,117,255)
+        font-weight: 500
+    &__btn
+        display: inline
+        line-height: 128px
+        padding: 7px 15px
+        font-size: 18px
+        cursor: pointer
+        transition: .15s
+        background: rgb(0,117,255)
+        border: 1px solid rgb(0,117,255)
+        color: #fff
+        &:hover
+            background: #fff
+            color: rgb(0,117,255)
+            border: 1px solid rgb(0,117,255)
+    &__header
+        font-size: 24px
+        text-align: center
+        font-weight: 500
+
+.sel
+    min-height: 70vh
+    background: #f8f8f8
+    padding: 150px 0 75px
+    &__header
+        font-size: 24px
+        text-align: center
+        font-weight: 500
+    &__content
+        transition: .25s
+        opacity: 0
+        animation: showText .25s 1
+        animation-fill-mode: forwards
+        animation-delay: 1.25s
+        max-width: 1024px
+        margin: 0 auto
+        text-align: center
+    &__block
+        display: flex
+        flex-wrap: wrap
+        vertical-align: bottom
+    &__item
+        max-width: 23%
+        margin: 50px 1%
+        &_img
+            width: 100%
+            height: 125px
+            object-fit: cover
+            margin-bottom: 10px
+        &_title
+            font-size: 18px
+            font-weight: 500
+            margin: 10px 0
+        &_color
+            font-size: 14px
+            color: gray
+        &_info
+            color: gray
+            font-size: 14px
+        &_btn
+            display: inline
+            line-height: 64px
+            padding: 3px 7px
+            border: 1px solid rgb(0,117,255)
+            cursor: pointer
+            background: #fff
+            transition: .15s
+            color: rgb(0,117,255)
+            &:hover
+                background: rgb(0,117,255)
+                color: #fff
+
+.br
+    min-height: 70vh
+    background: #f8f8f8
+    padding: 150px 0 75px
+    &__title
+        font-size: 24px
+        text-align: center
+        font-weight: 500
+    &__content
+        transition: .25s
+        opacity: 0
+        animation: showText .25s 1
+        animation-fill-mode: forwards
+        animation-delay: 1.25s
+        max-width: 1024px
+        margin: 0 auto
+        text-align: center
+
+.map
+    &__item
+        max-width: 30%
+        margin-left: 5px
+        &_img
+            height: 65px
+
+.cards
+    min-height: 70vh
+    background: #f8f8f8
+    padding: 150px 0 75px
+    &__header
+        font-size: 24px
+        text-align: center
+        font-weight: 500
+    &__content
+        transition: .25s
+        opacity: 0
+        animation: showText .25s 1
+        animation-fill-mode: forwards
+        animation-delay: 1.25s
+        max-width: 1024px
+        margin: 0 auto
+        text-align: center
+    &__block
+        display: flex
+        justify-content: space-between
+        flex-wrap: wrap
+        margin-top: 40px
+    &__item
+        width: 25%
+        text-align: center
+        border: 2px solid rgb(0,117,255)
+        border-radius: 15px
+        padding: 40px 20px 20px
+        transition: .3s
+        cursor: pointer
+        &:hover
+            background: #ebebeb
+        &_anim:hover
+            background: rgb(0,117,255)
+            color: #fff
+    &__type
+        width: 50px
+    &__num
+        font-size: 24px
+        font-weight: 500
+    &__active
+        font-size: 14px
+        &-no
+            color: #c41a1a
+    &__del
+        margin-top: 20px
+        font-size: 14px
+        transition: .15s
+        text-decoration: none
+        color: inherit
+        line-height: 48px
+        &:hover
+            cursor: pointer
+            color: #c41a1a
+    &__add
+        padding-top: 10px
+        font-size: 64px
+        &_text
+            font-size: 18px
+
+.modal
+    display: none
+    background: rgba(0, 0, 0, 0.4)
+    height: 100vh
+    width: 100vw
+    position: fixed
+    top: 0
+    z-index: 10
+    &__content
+        background: #f8f8f8
+        border-radius: 15px
+        width: 268px
+        padding: 25px 50px
+        margin: 0 auto
+        margin-top: 10vh
+    &__close
+        font-size: 24px
+        cursor: pointer
+        transition: .15s
+        font-weight: 500
+        line-height: 32px
+        &:hover
+            color: #c41a1a
+
+.history
+    min-height: 70vh
+    background: #f8f8f8
+    padding: 150px 0 75px
+    &__header
+        font-size: 24px
+        text-align: center
+        font-weight: 500
+    &__content
+        transition: .25s
+        opacity: 0
+        animation: showText .25s 1
+        animation-fill-mode: forwards
+        animation-delay: 1.25s
+        max-width: 1024px
+        margin: 0 auto
+    &__cards
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-evenly
+    &__card
+        margin-top: 20px
+        margin-left: 20px
+        border: 2px solid lightgray
+        border-radius: 15px
+        width: 28%
+        padding: 25px 10px
+        &-first
+            margin-left: 0
+    &__img
+        width: 100%
+        margin: 20px 0
+    &__book
+        display: flex
+        justify-content: space-between
+    &__title
+        font-size: 14px
+        font-weight: 300
+        color: gray
+    &__data
+        font-size: 18px
+        font-weight: 500
